<resources>
    <string name="app_name">Proyecto_Final_Movil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="logo_desc">Logo of the app</string>

    <!-- store data -->
    <string name="store_name">Ferreteria alvarito S.A</string>
    <string name="store_desc">En esta app podras mirar nuestros productos, además que podras
    realizar compras con nosotros. ¡Lo mejor en herramientas para tu empresa u hogar! Alvarito S.A,
    tu mejor opción.</string>


    <!--Comunes-->
    <string name="modify_txt">Modificar</string>
    <string name="delete_txt">Eliminar</string>
    <string name="recycler_txt">Recycler TXT</string>

    <!-- login text -->
    <string name="sign_up">Registrarme</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="sign_out">Cerrar Sesion</string>

    <string name="admin_greet">Bienvenid@ Administrador</string>

    <!-- Products strings -->
    <string name="product_txt">Catalogo</string>
    <string name="srch_products">Buscar Productos</string>
    <string name="default_results">0 resultados</string>
    <string name="add_productTxt">Agregar Producto</string>
    <string name="product_codeTxt">Código</string>
    <string name="product_nameTxt">Nombre</string>
    <string name="product_brandTxt">Marca</string>
    <string name="product_imageTxt">Imagen</string>
    <string name="propudct_priceTxt">Precio</string>
    <string name="product_features">Características</string>
    <string name="product_reference_codeTxt">Referencia</string>
    <string name="product_warrantTxt">Garantía</string>

    <!-- Clients strings-->
    <string name="client_txt">Clientes</string>

    <!-- Sales strings-->
    <string name="sales_txt">Ventas</string>

    <!--Login-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_id">Identificación</string>
    <string name="prompt_first_name">Nombres</string>
    <string name="prompt_last_name">Apellidos</string>
    <string name="prompt_phone">Telefono</string>
    <string name="prompt_address">Dirección</string>
    <string name="prompt_city">Ciudad</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_up">Crear Cuenta</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="default_web_client_id">804636565775-uu4n9eqq5mmr3iavicpf4e25ehcjis89.apps.googleusercontent.com</string>
</resources>