<?xml version="1.0" encoding="UTF-8" ?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_component"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context=".Validations.SignUpActivity">


        <TextView
            android:id="@+id/registroTitleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/edit_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />


        <EditText
            android:id="@+id/edit_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_txt_round_white"
            android:hint="@string/prompt_id"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/edit_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registroTitleTxt" />


        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_txt_round_white"
            android:hint="@string/prompt_first_name"
            android:inputType="textCapWords"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/edit_lastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_id" />

        <EditText
            android:id="@+id/edit_lastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_txt_round_white"
            android:hint="@string/prompt_last_name"
            android:inputType="textCapWords"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/edit_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_name" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_txt_round_white"
            android:hint="@string/prompt_phone"
            android:inputType="phone"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/edit_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_lastName" />


        <EditText
            android:id="@+id/edit_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_txt_round_white"
            android:hint="@string/prompt_address"
            android:inputType="textPostalAddress"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/edit_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_phone" />

        <EditText
            android:id="@+id/edit_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_txt_round_white"
            android:hint="@string/prompt_city"
            android:inputType="textCapWords"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/edit_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_address" />

        <EditText
            android:id="@+id/edit_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_txt_round_white"
            android:hint="@string/prompt_user"
            android:inputType="text"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/edit_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_city" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_txt_round_white"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/confirmSignUpBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_user" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirmSignUpBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/important_rounded"
            android:enabled="true"
            android:text="@string/action_sign_up"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/back_to_login_Btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password" />




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_to_login_Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_modify_btn"
            android:enabled="true"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmSignUpBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>