<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_component"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".Validations.SignUpActivity">


    <TextView
        android:id="@+id/addProductTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_productTxt"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edit_product_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />


    <EditText
        android:id="@+id/edit_product_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_txt_round_white"
        android:hint="@string/product_codeTxt"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/edit_product_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addProductTitle" />


    <EditText
        android:id="@+id/edit_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_txt_round_white"
        android:hint="@string/product_nameTxt"
        android:inputType="textCapWords"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/edit_product_brand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_product_code" />

    <EditText
        android:id="@+id/edit_product_brand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_txt_round_white"
        android:hint="@string/product_brandTxt"
        android:inputType="textCapWords"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/edit_product_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_product_name" />

    <EditText
        android:id="@+id/edit_product_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_txt_round_white"
        android:hint="@string/product_imageTxt"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/edit_product_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_product_brand" />


    <EditText
        android:id="@+id/edit_product_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_txt_round_white"
        android:hint="@string/propudct_priceTxt"
        android:inputType="textPostalAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/edit_product_features"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_product_img" />

    <EditText
        android:id="@+id/edit_product_features"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_txt_round_white"
        android:hint="@string/product_features"
        android:inputType="textCapWords"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/edit_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_product_price" />

    <EditText
        android:id="@+id/edit_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_txt_round_white"
        android:hint="@string/product_reference_codeTxt"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/edit_product_warrant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_product_features" />

    <EditText
        android:id="@+id/edit_product_warrant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_txt_round_white"
        android:hint="@string/product_warrantTxt"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/addProductBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_user" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addProductBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/important_rounded"
        android:enabled="true"
        android:text="@string/add_productTxt"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_product_warrant" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>