<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.LoginActivity"
    android:background="@color/bg_component"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/loginTitleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/login_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_txt_round_white"
        android:hint="@string/prompt_user"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/login_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitleTxt" />

    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_txt_round_white"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/confirmSignInBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmSignInBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/important_rounded"
        android:enabled="true"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/signInGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_pwd"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:buttonSize="wide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmSignInBtn"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>