<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.AdminMainFragment"
    android:paddingHorizontal="45dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/admin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_greet"
        android:textSize="45sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"/>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="120sp"
        android:id="@+id/catalogo_card"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin_title">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/shopping_cart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_txt"
                android:layout_marginStart="10sp"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="70sp"
        android:id="@+id/clientes_card"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/catalogo_card">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/shopping_cart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textSize="20sp"
                android:text="@string/client_txt"
                android:textAllCaps="true"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="70sp"
        android:id="@+id/viewMale"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clientes_card">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/shopping_cart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textSize="20sp"
                android:text="@string/sales_txt"
                android:textAllCaps="true"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>